# struct-writer

./: .clang-format  .coveragerc  .gitignore  .justfile  .pre-commit-config.yaml  LICENSE  README.md  changelog.md  license.rtf  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: pre-commit.yml  unit_test.yml  update-actions.yml
examples/: packed_templates.toml  structures.toml  template.toml  template_c.toml  template_csv.toml  template_rust.toml  template_scala.toml
examples/rust/: Cargo.toml  build.rs
examples/rust/src/: lib.rs
scripts/: update_github_actions.py
src/generate_structured_code/: default_template.py  generate_structured_code.py
src/struct_gen/: generate_structured_code.py
src/struct_writer/: default_template.py  default_template_c.py  default_template_csv.py  default_template_rust.py  default_template_scala.py  definitions.py  generate_structured_code.py  render_c.py  render_csv.py  render_rust.py  render_scala.py
src/struct_writer/struct_parse/: __init__.py  struct_parse.py
src/struct_writer/templating/: __init__.py
src/structured_api/: __init__.py  group.py  structure.py
src/templating/: __init__.py
tests/: test_definitions.py  test_generate_structured_code.py  test_group.py  test_hello.py  test_render_c.py  test_render_csv.py  test_render_rust.py  test_render_scala.py  test_structure.py
tests/struct_parse/: test_struct_parse.py
tests/templating/: test_templating.py
