[project]
authors = [
    {name = "Ryan Bartling", email = "ryan.bartling@gmail.com"},
]
description = "Generate structured code for APIs and documentation"
name = "struct_writer"
readme = "README.md"
requires-python = ">=3.11,<3.14"
version = "0.6.1"
dependencies = [
    "click>=8.2.0",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "pydantic>=2.11.4",
]

[project.urls]
repository = "https://github.com/drbartling/struct-writer"

[project.scripts]
struct-writer = "struct_writer.generate_structured_code:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.coverage.run]
branch = true
parallel = true
source = ["struct_writer"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 80

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.isort]
line_length = 80
profile = "black"

[tool.pytest.ini_options]
addopts = [
    "-q",
    "--cov-report=term-missing:skip-covered",
    "--cov",
    "--durations=5",
    "--ignore=acceptance_test",
]
testpaths = ["tests"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.0.0"]
