[project]
authors = [{name = "Ryan Bartling", email = "ryan.bartling@gmail.com"}]
description = "Generate structured code for APIs and documentation"
name = "struct_writer"
readme = "README.md"
requires-python = ">=3.12,<3.14"
version = "0.8.1"
dependencies = [
    "click>=8.2.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
]

[project.urls]
repository = "https://github.com/drbartling/struct-writer"

[project.scripts]
struct-writer = "struct_writer.generate_structured_code:main"

[dependency-groups]
dev = [
    "basedpyright>=1.31.5",
    "devtools>=0.12.2",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.coverage.run]
branch = true
parallel = true
source = ["struct_writer"]

[tool.isort]
line_length = 80
profile = "black"

[tool.pytest.ini_options]
addopts = [
    "-q",
    "--cov",
    "--durations=5",
    "--ignore=acceptance_test",
    "--doctest-modules",
]
testpaths = ["tests", "src"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.0.0"]
