[project]
authors = [{name = "Ryan Bartling", email = "ryan.bartling@gmail.com"}]
description = "Generate structured code for APIs and documentation"
name = "struct_writer"
readme = "README.md"
requires-python = ">=3.11"
version = "0.10.0"
dependencies = [
    "click>=8.3.2",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.3.4",
    "tomli>=2.4.1",
    "typing-extensions>=4.0.0",
]

[project.urls]
repository = "https://github.com/drbartling/struct-writer"

[project.scripts]
struct-writer = "struct_writer.generate_structured_code:main"

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "devtools>=0.12.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.coverage.run]
branch = true
parallel = true
source = ["struct_writer"]

[tool.isort]
line_length = 80
profile = "black"

[tool.pytest.ini_options]
addopts = [
    "-q",
    "--cov",
    "--durations=5",
    "--ignore=acceptance_test",
    "--doctest-modules",
]
testpaths = ["tests", "src"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.0.0"]
