[package]
name = "rust-example"
version = "0.1.0"
edition = "2024"

[features]
default = ["std", "serde"]
std = ["serde/std"]
serde = ["dep:serde", "dep:serde-big-array"]

[dependencies]
modular-bitfield = "0.12.0"
serde = {version = "1.0.225", features = ["derive"], optional = true}
serde-big-array = {version = "0.5.1", optional = true}
heapless = "0.9.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
serde_json = "1.0.145"

[build-dependencies]
anyhow = "1.0.99"
